// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Connection on models with no codegen includes AttributeTypeEnum 1`] = `
"type Post {
  id: ID!
  title: String!
  comments(filter: RelayModelCommentFilterInput, sortDirection: RelayModelSortDirection, first: Int, after: String): RelayModelCommentConnection
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type Comment {
  id: ID!
  content: String
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type RelayModelCommentConnection {
  edges: [RelayModelCommentEdge]
  pageInfo: PageInfo
}

type RelayModelCommentEdge {
  node: Comment
  cursor: String
}

enum RelayModelSortDirection {
  ASC
  DESC
}

input RelayModelStringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  contains: String
  notContains: String
  between: [String]
  beginsWith: String
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
  size: RelayModelSizeInput
}

input RelayModelIDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  contains: ID
  notContains: ID
  between: [ID]
  beginsWith: ID
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
  size: RelayModelSizeInput
}

input RelayModelIntInput {
  ne: Int
  eq: Int
  le: Int
  lt: Int
  ge: Int
  gt: Int
  between: [Int]
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
}

input RelayModelFloatInput {
  ne: Float
  eq: Float
  le: Float
  lt: Float
  ge: Float
  gt: Float
  between: [Float]
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
}

input RelayModelBooleanInput {
  ne: Boolean
  eq: Boolean
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
}

input RelayModelSizeInput {
  ne: Int
  eq: Int
  le: Int
  lt: Int
  ge: Int
  gt: Int
  between: [Int]
}

input RelayModelCommentFilterInput {
  id: RelayModelIDInput
  content: RelayModelStringInput
  and: [RelayModelCommentFilterInput]
  or: [RelayModelCommentFilterInput]
  not: RelayModelCommentFilterInput
}

enum RelayModelAttributeTypes {
  binary
  binarySet
  bool
  list
  map
  number
  numberSet
  string
  stringSet
  _null
}
"
`;

exports[`Connection on models with no codegen includes custom enum filters 1`] = `
"type Cart {
  id: ID!
  cartItems(filter: RelayModelCartItemFilterInput, sortDirection: RelayModelSortDirection, first: Int, after: String): RelayModelCartItemConnection
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

type CartItem {
  id: ID!
  productType: PRODUCT_TYPE!
  cart: Cart
  createdAt: AWSDateTime!
  updatedAt: AWSDateTime!
}

enum PRODUCT_TYPE {
  UNIT
  PACKAGE
}

type RelayModelCartItemConnection {
  edges: [RelayModelCartItemEdge]
  pageInfo: PageInfo
}

type RelayModelCartItemEdge {
  node: CartItem
  cursor: String
}

enum RelayModelSortDirection {
  ASC
  DESC
}

input RelayModelStringInput {
  ne: String
  eq: String
  le: String
  lt: String
  ge: String
  gt: String
  contains: String
  notContains: String
  between: [String]
  beginsWith: String
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
  size: RelayModelSizeInput
}

input RelayModelIDInput {
  ne: ID
  eq: ID
  le: ID
  lt: ID
  ge: ID
  gt: ID
  contains: ID
  notContains: ID
  between: [ID]
  beginsWith: ID
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
  size: RelayModelSizeInput
}

input RelayModelIntInput {
  ne: Int
  eq: Int
  le: Int
  lt: Int
  ge: Int
  gt: Int
  between: [Int]
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
}

input RelayModelFloatInput {
  ne: Float
  eq: Float
  le: Float
  lt: Float
  ge: Float
  gt: Float
  between: [Float]
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
}

input RelayModelBooleanInput {
  ne: Boolean
  eq: Boolean
  attributeExists: Boolean
  attributeType: RelayModelAttributeTypes
}

input RelayModelSizeInput {
  ne: Int
  eq: Int
  le: Int
  lt: Int
  ge: Int
  gt: Int
  between: [Int]
}

input RelayModelPRODUCT_TYPEInput {
  eq: PRODUCT_TYPE
  ne: PRODUCT_TYPE
}

input RelayModelCartItemFilterInput {
  id: RelayModelIDInput
  productType: RelayModelPRODUCT_TYPEInput
  and: [RelayModelCartItemFilterInput]
  or: [RelayModelCartItemFilterInput]
  not: RelayModelCartItemFilterInput
}

enum RelayModelAttributeTypes {
  binary
  binarySet
  bool
  list
  map
  number
  numberSet
  string
  stringSet
  _null
}
"
`;
